# messe-backend-rust

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: rust.yml
prisma/: dev.db  schema.prisma
src/: main.rs  names.json  routes.rs  ws.rs
src/routes/: mod.rs  structs.rs  subscription.rs
src/routes/admin/: mod.rs
src/routes/helper/: admin.rs  generat_data.rs  guard.rs  mod.rs
src/routes/subscribtion/: mod.rs  service.rs
src/routes/user_related/: counts.rs  mod.rs
